# PublicIPWebsite

./: Containerfile  DEVELOPMENT_STATUS.md  README.md  pyproject.toml
app/: main.py
scripts/: install-fedora-cloudflare.sh
